// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["interactiveTransactions"]
}

generator dbml {
  provider            = "prisma-dbml-generator"
  projectName         = "CoverageMetrics"
  projectDatabaseType = "MySQL"
  projectNote         = "Database for housing metrics on Coverage"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model Build {
  created_at      String  @db.VarChar(255)
  url             String? @db.VarChar(255)
  commit_message  String  @db.VarChar(255)
  branch          String  @db.VarChar(255)
  committer_name  String  @db.VarChar(255)
  committer_email String  @db.VarChar(255)
  commit_sha      String  @id @db.VarChar(255)
  repo_name       String  @db.VarChar(255)
  badge_url       String  @db.VarChar(255)
  available       Boolean @default(true)
  coverage_change Float
  covered_percent Float?

  UncoveredFile UncoveredFile[]
  UncoveredLine UncoveredLine[]
  @@map("builds")
}

model UncoveredFile {
  id              Int          @id @default(autoincrement())
  lines_uncovered Int
  coverage        Float
  delta           Float
  file_ref        String       @db.VarChar(255)
  build_ref       String       @db.VarChar(255)
  build           Build        @relation(fields: [build_ref], references: [commit_sha], onDelete: Cascade, onUpdate: NoAction)
  file            FileCoverage @relation(fields: [file_ref], references: [file], onDelete: Cascade, onUpdate: NoAction)

  @@unique([build_ref, file_ref])
  @@map("uncovered_files")
}

model UncoveredLine {
  id          Int          @id @default(autoincrement())
  line_number Int
  line_text   String       @db.VarChar(255)
  file_ref    String       @db.VarChar(255)
  build_ref   String       @db.VarChar(255)
  build       Build        @relation(fields: [build_ref], references: [commit_sha], onDelete: Cascade, onUpdate: NoAction)
  file        FileCoverage @relation(fields: [file_ref], references: [file], onDelete: Cascade, onUpdate: NoAction)

  @@unique([line_number, line_text, file_ref, build_ref])
  @@map("uncovered_lines")
}

model LineCoverage {
  line_number     Int
  line_text       String       @db.VarChar(255)
  times_uncovered Int
  file_ref        String       @db.VarChar(255)
  coverage_url    String?      @db.VarChar(255)
  file            FileCoverage @relation(fields: [file_ref], references: [file], onDelete: Cascade, onUpdate: NoAction)

  @@id([line_number, line_text])
  @@map("line_coverage")
}

model FileCoverage {
  file                   String  @id @db.VarChar(255)
  times_coverage_changed Int
  current_coverage       Float
  coverage_url           String? @db.VarChar(255)

  LineCoverage  LineCoverage[]
  UncoveredFile UncoveredFile[]
  UncoveredLine UncoveredLine[]
  @@map("file_coverage")
}
