//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "CoverageMetrics" {
  database_type: 'MySQL'
  Note: 'Database for housing metrics on Coverage'
}

Table Build {
  created_at String [not null]
  url String
  commit_message String [not null]
  branch String [not null]
  committer_name String [not null]
  committer_email String [not null]
  commit_sha String [pk]
  repo_name String [not null]
  badge_url String [not null]
  available Boolean [not null, default: true]
  coverage_change Float [not null]
  covered_percent Float
  UncoveredFile UncoveredFile [not null]
  UncoveredLine UncoveredLine [not null]
}

Table UncoveredFile {
  id Int [pk, increment]
  lines_uncovered Int [not null]
  coverage Float [not null]
  delta Float [not null]
  file_ref String [not null]
  build_ref String [not null]
  build Build [not null]
  file FileCoverage [not null]

  indexes {
    (build_ref, file_ref) [unique]
  }
}

Table UncoveredLine {
  id Int [pk, increment]
  line_number Int [not null]
  line_text String [not null]
  file_ref String [not null]
  build_ref String [not null]
  build Build [not null]
  file FileCoverage [not null]

  indexes {
    (line_number, line_text, file_ref, build_ref) [unique]
  }
}

Table LineCoverage {
  line_number Int [not null]
  line_text String [not null]
  times_uncovered Int [not null]
  file_ref String [not null]
  coverage_url String
  file FileCoverage [not null]

  indexes {
    (line_number, line_text) [pk]
  }
}

Table FileCoverage {
  file String [pk]
  times_coverage_changed Int [not null]
  current_coverage Float [not null]
  coverage_url String
  LineCoverage LineCoverage [not null]
  UncoveredFile UncoveredFile [not null]
  UncoveredLine UncoveredLine [not null]
}

Ref: UncoveredFile.build_ref > Build.commit_sha [delete: Cascade]

Ref: UncoveredFile.file_ref > FileCoverage.file [delete: Cascade]

Ref: UncoveredLine.build_ref > Build.commit_sha [delete: Cascade]

Ref: UncoveredLine.file_ref > FileCoverage.file [delete: Cascade]

Ref: LineCoverage.file_ref > FileCoverage.file [delete: Cascade]